--- a/app/globals.css
+++ b/app/globals.css
@@ -1,10 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap');
 
 html, body {
+  @apply font-sans;
   margin: 0;
   padding: 0;
   height: auto;
   width: auto;
+  font-family: 'Gowun Dodum', sans-serif;
 }
