docs: 컴포넌트 파일 위치 변경

--- a/components/list/ListLayout.module.css
+++ b/components/list/ListLayout.module.css
@@ -6,6 +6,9 @@
   flex-wrap: nowrap;
   width: 100vw;
   justify-content: center;
-  scroll-padding: 50%;
   margin: 30px 0 30px 0;
+}
+
+.listLayout::-webkit-scrollbar {
+  display: none;
 }
