style: list 페이지 스타일 변화

--- a/components/list/ListCard.module.css
+++ b/components/list/ListCard.module.css
@@ -2,7 +2,7 @@
   width: 600px;
   height: 660px;
   flex-direction: column;
-  display: block;
+  display: flex;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   background-color: #f9f9f9;
