--- a/components/list/ListLayout.module.css
+++ b/components/list/ListLayout.module.css
@@ -2,11 +2,10 @@
   display: flex;
   overflow-x: auto;
   white-space: nowrap;
-  scroll-snap-type: x mandatory;
   flex-wrap: nowrap;
-  width: 100vw;
-  justify-content: center;
+  width: 100%;
   margin: 30px 0 30px 0;
+  padding: 0 25%;
 }
 
 .listLayout::-webkit-scrollbar {
