--- a/components/modal/DetailModal.module.css
+++ b/components/modal/DetailModal.module.css
@@ -16,6 +16,15 @@
   animation: fadeOut 0.3s;
 }
 
+.modalCloseBtn {
+  top: 10px;
+  right: 15px;
+  font-size: 24px;
+  font-weight: bold;
+  cursor: pointer;
+  color: #8b0000;
+}
+
 @keyframes fadeIn {
   from {
     opacity: 0;
@@ -36,11 +45,128 @@
 
 .modalContainer {
   background-color: white;
-  padding: 20px;
-  width: 60%;
+  padding: 10px;
+  width: 1280px;
+  height: 720px;
   border-radius: 10px;
-  display: flex;
   animation: slideIn 0.3s;
 }
 
-/* ... 나머지 스타일 ... */
+.modalContent {
+  width: 100%;
+  height: 100%;
+  padding: 10px;
+  display: flex;
+}
+
+.mainContainer {
+  width: 50%;
+}
+
+.videoContainer {
+  width: 100%;
+  padding: 5px;
+}
+
+.titleContainer {
+  display: flex; 
+  flex-direction: column; 
+  justify-content: space-between; 
+  align-items: flex-start; 
+  padding: 10px;
+  height: auto;
+}
+
+.recipeNumberBox {
+  font-size: 0.7em;
+  align-self: flex-start;
+  color: #8b0000;
+  display: flex;
+  order: 1;
+  justify-content: space-between;
+}
+
+.recipeNunber {
+  padding-top: 6px;
+}
+
+.title {
+  font-size: 2em;
+  color: #8b0000;
+  margin-bottom: 0.5em;
+  order: 2;
+}
+
+.defaultInfo {
+  font-size: 0.9em;
+  color: #3e3e3e;
+  margin: 5px;
+  order: 3;
+  display: flex;
+  flex-direction: column; 
+  gap: 4px; 
+  margin: 10px 0; 
+}
+
+.defaultInfo p {
+  display: flex;
+  align-items: center; 
+  font-size: 0.9em;
+  color: #4a4a4a;
+}
+
+.defaultInfo p:before {
+  content: '•'; 
+  color: #8b0000; 
+  margin-right: 8px; 
+  font-size: 1em;
+}
+
+.detailsContainer {
+  padding: 5px;
+  width: 50%;
+  overflow-y: auto;
+}
+
+.ingredientBox
+.explanationBox {
+  margin: auto;
+  padding: auto;
+}
+
+.ingredientTitle,
+.explanationTitle {
+  font-size: 1.5em;
+  color: #8b0000;
+  margin: 10px;
+  margin: 10px 0; 
+}
+
+.ingredientList,
+.explanationText {
+  background-color: #fff0f0;
+  border: 1px solid #ffb6b9;
+  border-radius: 5px;
+  padding: 10px;
+  font-size: 0.9em;
+  color: #3e3e3e;
+  max-height: 200px;
+  white-space: pre-wrap;
+  overflow-x: hidden; 
+  overflow-y: auto;
+}
+
+.ingredientList {
+  text-align: center; 
+}
+
+@keyframes slideIn {
+  from {
+    transform: translateY(-20px);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
