style: hover 추가

--- a/components/list/ListCard.module.css
+++ b/components/list/ListCard.module.css
@@ -13,6 +13,10 @@
   will-change: transform;
 }
 
+.listCard:hover {
+  cursor: pointer;
+}
+
 .thumbnailContainer {
   position: relative;
   width: 100%;
