--- a/components/list/ListLayout.module.css
+++ b/components/list/ListLayout.module.css
@@ -1,13 +1,43 @@
 .listLayout {
   display: flex;
+  align-items: center;
   overflow-x: auto;
   white-space: nowrap;
-  flex-wrap: nowrap;
+  position: relative;
   width: 100%;
+  padding: 0 20%;
   margin: 10px 0 30px 0;
-  padding: 0 25%;
 }
 
 .listLayout::-webkit-scrollbar {
   display: none;
+}
+
+.swipeIcon {
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 10;
+  animation: swipeAnimation 1.5s ease-in-out infinite;
+}
+
+.swipeIcon.left {
+  left: 10px;
+  padding: 0 5%;
+  animation-direction: alternate;
+}
+
+.swipeIcon.right {
+  right: 10px;
+  padding: 0 5%;
+  animation-direction: alternate-reverse;
+}
+
+@keyframes swipeAnimation {
+  0%,
+  100% {
+    transform: translateX(0);
+  }
+  50% {
+    transform: translateX(-10px);
+  }
 }
