--- a/pages/404.module.css
+++ b/pages/404.module.css
@@ -2,7 +2,7 @@
     text-align: center;
     font-size: 2rem;
     width: auto;
-    height: auto;
+    height: 100%;
     justify-items: center;
     align-items: center;
 }
