--- a/components/modal/DetailModal.module.css
+++ b/components/modal/DetailModal.module.css
@@ -75,6 +75,7 @@
   align-items: flex-start; 
   padding: 10px;
   height: auto;
+  overflow: hidden;
 }
 
 .recipeNumberBox {
@@ -91,35 +92,9 @@
 }
 
 .title {
-  font-size: 2em;
+  font-size: 2.3em;
   color: #8b0000;
   margin-bottom: 0.5em;
-  order: 2;
-}
-
-.defaultInfo {
-  font-size: 0.9em;
-  color: #3e3e3e;
-  margin: 5px;
-  order: 3;
-  display: flex;
-  flex-direction: column; 
-  gap: 4px; 
-  margin: 10px 0; 
-}
-
-.defaultInfo p {
-  display: flex;
-  align-items: center; 
-  font-size: 0.9em;
-  color: #4a4a4a;
-}
-
-.defaultInfo p:before {
-  content: '•'; 
-  color: #8b0000; 
-  margin-right: 8px; 
-  font-size: 1em;
 }
 
 .detailsContainer {
