--- a/components/modal/InfoBox.module.css
+++ b/components/modal/InfoBox.module.css
@@ -1,13 +1,15 @@
 .infoBox {
   margin: auto;
   padding: auto;
+  height: 45%;
 }
 
 .infoTitle {
-  font-size: 1.5em;
+  font-size: 2em;
   color: #8b0000;
   margin: 10px;
   margin: 10px 0; 
+  padding-left: 20px;
 }
 
 .infoContent {
@@ -17,7 +19,8 @@
   padding: 10px;
   font-size: 0.9em;
   color: #3e3e3e;
-  max-height: 200px;
+  height: 240px;
+  max-height: 240px;
   white-space: pre-wrap;
   overflow-x: hidden; 
   overflow-y: auto;
