style: DetailModal 버튼 수정

--- a/components/modal/DetailModal.module.css
+++ b/components/modal/DetailModal.module.css
@@ -19,10 +19,8 @@
 .modalCloseBtn {
   top: 10px;
   right: 15px;
-  font-size: 24px;
-  font-weight: bold;
-  cursor: pointer;
-  color: #8b0000;
+  display: flex;
+  justify-content: right;
 }
 
 @keyframes fadeIn {
